--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-cli-plugin-style-resources-loader": "^0.1.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.5",
@@ -20,6 +21,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
+    "style-resources-loader": "^1.3.3",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
